--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@
 
 @media(min-width:768px){
 #mini-banners .col-12{
-     max-witdh:30%;
+     min-width:30%;
     }
 
 }
@@ -27,5 +27,6 @@
     height: 200px;
 }
 p{
-    color: rgb(88, 28, 28);
+    color:#401818;
+    
 }
