--- a/css/master.css
+++ b/css/master.css
@@ -12,8 +12,12 @@ a{
 p{
     color: rgb(39, 34, 34);
     font-family:sans-serif ;
-
+    font-size: 20px;
+    padding: 10px;
+  
+   
 }
+
 
 body{
     background-color:#f8f8f896;
@@ -22,7 +26,7 @@ body{
 }
 header{
     width: 100%;
-    background-color: #bbbbbbef;
+    background-color: #dbd8d8a1;
     display:block;
 }
 form{
@@ -39,82 +43,52 @@ form{
 .secondary-bg-color{
     background-color:rgba(137, 137, 143, 0.913);
 }
-
-#navbar .navbar-nav{
-    flex-direction: row;
-    justify-content: end;
-   
-}
+/* menu*/
+.navbar-nav{
+    font-weight: 800;
+    text-align:center;
+    width: 100%;
+    margin:auto
+    }
+    
 #navbar a,
 #navbar button{
    color:rgb(0, 0, 0);
    }
-.navbar-brand{
-    font-weight: 700;
-    width:100%;
-    text-align:center;
-  
-}
+
 @media(min-width:768px){
     .navbar-brand{
     text-align: left; 
 }
-}
 .navbar-items{
-    justify-content: center;
-    align-items: center;
-    
-    }
+    width: auto;
+    position: center;
+}
 @media(min-width:768px){
     .navbar-items{
     min-width: 100%;
     }
-}
-#search-form{
-    min-width:100%;
-    margin:12em 0;
-    border:2px solid #a39696cf;
-    border-radius: 5px;
-    padding: 2px 2px;
-    
-    
-}
-@media(min-width:768px){
-    #search-form{
-    width: 100%;
-    margin:0; 
-    }
-}
-#search-form input{
-    background-color: transparent;
-    border:none;
-    color:rgba(7, 6, 6, 0.913);
 
 }
-#search-form input:focus{
- box-shadow: none;
-}
+
 /*navbar bottom*/
 #bottom-navbar-container{
     font-weight: 700;
     color: #ffff;
-    background-color: rgba(37, 37, 38, 0.404);
-    
-  }
+    background-color: rgba(37, 37, 38, 0.404);    
+}
 #bottom-navbar-container a{
-    color: rgba(255, 255, 255, 0.913);
-    
+    color: rgba(255, 255, 255, 0.913);   
 }
+}
+/* footer*/
+li{
+    list-style-type: none;
+}
+#footer{
+    background-color:#dbd8d8a1;
+    width: 100%;
+}
+#newsletter-container{
 
-
-/* footer */
-#contact-area{
-    text-align: center;
-}
-.contact-box{
-    padding-bottom: 50px;
-    margin-bottom: 50px;
-}
-.contact-tile{
-    color: #401818;
 }
